# bigint

./: BigInt.hpp  CMakeLists.txt  README.md
tests/: BigIntTests.cpp  BigIntTests.hpp  CMakeLists.txt
